--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "joi": "^10.4.1",
     "lodash": "^4.17.4",
     "method-override": "^2.3.8",
+    "moment": "^2.22.1",
     "moment-timezone": "^0.5.13",
     "mongoose": "^4.9.7",
     "morgan": "^1.8.1",
